# faceTrackingLinuxWithMic

./: CMakeLists.txt
models/: version-RFB-640-1280.mnn  version-RFB-640.mnn  version-slim-640-640.mnn
src/: FaceDetection.cpp  FaceDetection.hpp  main.cpp
